--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <div class="top-wrapper">
     <div class="container">
-      <img src="cropped-nicole-honeywill-730102-unsplash.jpg">
+      <img src="image/cropped-nicole-honeywill-730102-unsplash.jpg">
       <p>Writeは文章を書く人のためのミニマルなWordPressテーマです。装飾を極限まで省いたデザインは、あなたの文章を主役にします。</p>
     </div>
   </div>
@@ -130,7 +130,7 @@
     <div class="container">
       <div class="profile">
 
-        <img class="photo" src="profile-m.png" />
+        <img class="photo" src="image/profile-m.png" />
         <div class="profile-heading">
           <h1>John Doe</h1>
           <a href="#"><i class="fab fa-twitter fa-lg"></i></a>
